# GO-Center

./: .gitignore  User.py  app.py  forms.py  header.html  index.html  models.py  package-lock.json  package.json  prepros.config  pyproject.toml  requirements.txt
admin/: admin.py
css/: style.css
instance/: app.db
scss/: style.scss  vars.scss
static/css/: style.css  style.css.map
static/js/: t1.js  test.js
static/scss/: style.scss  vars.scss
templates/: about.html  animated-cat-404.html  base.html  error.html  groups.html  index.html  login.html  profile-edit.html  profile.html  register.html  test-page.html
to_remove/: FDataBase.py  flsite.db  slack-bot.py  sq_db.sql  t.html  test-file.ts  test-js-file.js  tests.py  xndir.py
