[tool.poetry]
name = "GO-Center"
version = "0.1.0"
description = ""
authors = ["Suren <parsyansuren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = ">=2.1.2"
Flask-WTF = "^1.1.1"
Flask-SQLAlchemy = ">=3.0.5"
click = ">=8.1.3"
importlib-metadata = ">=4.11.3"
itsdangerous = ">=2.1.2"
markupsafe = ">=2.1.1"
style = ">=1.1.0"
update = ">=0.0.1"
werkzeug = ">=2.1.2"
zipp = ">=3.8.0"
wtforms = ">=3.0.1,<3.1.0"
flask-login = "^0.6.2"
flask-admin = "^1.6.1"
types-flask = "^1.1.6"
types-flask-sqlalchemy = "^2.5.9.4"
dpython = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
